--- a/css/raspit.css
+++ b/css/raspit.css
@@ -3,6 +3,19 @@ body {
     margin: 0;
 }
 
+
+#site_title {
+    position: absolute;
+    z-index: 2000;
+    color: white;
+    text-shadow: 2px 2px 3px #000000;
+    width: 100%;
+    text-align: center;
+    padding-top: 0.5em;
+    font-size: x-large;
+    font-weight: bold;
+}
+
 html, body, #map {
     height: 100%;
     font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
