--- a/css/raspit.css
+++ b/css/raspit.css
@@ -8,7 +8,7 @@ body {
     position: absolute;
     z-index: 2000;
     color: white;
-    text-shadow: 2px 2px 3px #000000;
+    text-shadow: 1px 1px 3px #000000,-1px -1px 3px #000000;
     width: 100%;
     text-align: center;
     padding-top: 0.5em;
